[gd_scene load_steps=7 format=3 uid="uid://dyhaw84wvc2xt"]

[ext_resource type="Theme" uid="uid://bs00b53m5f3ue" path="res://common/theme/default_theme.tres" id="1_k2vhn"]
[ext_resource type="Script" path="res://common/level_selection.gd" id="1_ni3vj"]
[ext_resource type="PackedScene" uid="uid://ds2w76ty8pjis" path="res://common/back.tscn" id="2_g4y6w"]
[ext_resource type="Texture2D" uid="uid://cao8o1cm0h6it" path="res://assets/images/ui/barVertical_shadow_mid.png" id="3_l0w73"]
[ext_resource type="PackedScene" uid="uid://cgrbi4d3l3k3f" path="res://common/deck_node.tscn" id="4_q5fyv"]
[ext_resource type="Texture2D" uid="uid://cb14hg0v2kb7y" path="res://assets/images/cards/profiles/hero_2.png" id="5_ftm28"]

[node name="Level Selection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_k2vhn")
script = ExtResource("1_ni3vj")

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_right = 59.5
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="Back" parent="." instance=ExtResource("2_g4y6w")]
layout_mode = 0
offset_left = 10.0
offset_top = 13.0
offset_right = 124.0
offset_bottom = 58.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DeckChoice" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/DeckChoice"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/DeckChoice/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("3_l0w73")

[node name="Label" type="Label" parent="MarginContainer/DeckChoice/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose your Deck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/DeckChoice/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeckList" type="FlowContainer" parent="MarginContainer/DeckChoice/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="ChoosenDeck" type="VBoxContainer" parent="MarginContainer/DeckChoice"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/DeckChoice/ChoosenDeck"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("3_l0w73")

[node name="Label" type="Label" parent="MarginContainer/DeckChoice/ChoosenDeck/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Selected Deck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedDeckTexture" type="TextureRect" parent="MarginContainer/DeckChoice/ChoosenDeck"]
unique_name_in_owner = true
custom_minimum_size = Vector2(194, 205)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectedDeckName" type="Label" parent="MarginContainer/DeckChoice/ChoosenDeck"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="ChooseD" type="Button" parent="MarginContainer/DeckChoice/ChoosenDeck"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
disabled = true
text = "Choose"

[node name="OpponentChoice" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/OpponentChoice"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/OpponentChoice/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("3_l0w73")

[node name="Label" type="Label" parent="MarginContainer/OpponentChoice/VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Choose your opponent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/OpponentChoice/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpponentList" type="FlowContainer" parent="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
alignment = 1

[node name="DeckNode" parent="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList" instance=ExtResource("4_q5fyv")]
layout_mode = 2
id = &"Deck123"
title = "Demonic Bargain"

[node name="Profile" parent="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode" index="0"]
texture = ExtResource("5_ftm28")

[node name="Button" parent="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode/NinePatchRect" index="0"]
text = "Demonic Bargain"

[node name="DeckNode2" parent="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList" instance=ExtResource("4_q5fyv")]
layout_mode = 2
id = &"Deck3212"
title = "Radiant Crusader"

[node name="Button" parent="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode2/NinePatchRect" index="0"]
text = "Radiant Crusader"

[node name="ChoosenDeck" type="VBoxContainer" parent="MarginContainer/OpponentChoice"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/OpponentChoice/ChoosenDeck"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("3_l0w73")

[node name="Label" type="Label" parent="MarginContainer/OpponentChoice/ChoosenDeck/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Selected Opponent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedOppTexture" type="TextureRect" parent="MarginContainer/OpponentChoice/ChoosenDeck"]
unique_name_in_owner = true
custom_minimum_size = Vector2(194, 205)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="SelectedOppName" type="Label" parent="MarginContainer/OpponentChoice/ChoosenDeck"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="ChooseOpp" type="Button" parent="MarginContainer/OpponentChoice/ChoosenDeck"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
disabled = true
text = "Start"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/DeckChoice/ChoosenDeck/ChooseD" to="." method="_on_choose_d_pressed"]
[connection signal="pressed" from="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode" to="." method="_on_opponent_pressed"]
[connection signal="pressed" from="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode2" to="." method="_on_opponent_pressed"]
[connection signal="pressed" from="MarginContainer/OpponentChoice/ChoosenDeck/ChooseOpp" to="." method="_on_choose_opp_pressed"]

[editable path="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode"]
[editable path="MarginContainer/OpponentChoice/VBoxContainer/ScrollContainer/OpponentList/DeckNode2"]
